Correção de pequenos erros durante testes